Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectNumber.quorum
class Main
    action Main
        Object v = Test()
    end

    action Test() returns Object
        number var = 5.0
        return var
    end
end